[ACPI] fix reboot on poweroff regression due to enabled wakeup GPEs http://bugzilla.kernel.org/show_bug.cgi?id=3669

Signed-off-by: David Shaohua Li <shaohua.li@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>